--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-napi        = "2"
+http-body-util = "0.1.2"
+hyper = { version = "1.4.1", features = ["full"] }
+hyper-util = { version = "0.1.8", features = ["full"] }
+napi        = { version = "2", features = ["async"] }
 napi-derive = "2"
+tokio = { version = "1.40.0", features = ["full"] }
 
 [build-dependencies]
 napi-build = "2"
