--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template",
+  "name": "fresh",
   "version": "1.0.0",
   "description": "Template project for writing node package with napi-rs",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "index.js"
   ],
   "napi": {
-    "name": "package-template",
+    "name": "fresh",
     "triples": {
       "defaults": true,
       "additional": [
@@ -103,5 +103,8 @@
     "singleQuote": true,
     "arrowParens": "always"
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "dependencies": {
+    "@napi-rs/package-template": "^1.0.0"
+  }
 }
